# ghc_lazy_file_content_error

./: Main.hs  README.md  bracket.cabal  stack.yaml
